Add search cells by administrative region
