# geocell/src/main/kotlin/org/sdato/geocell/dto/response/AdministrativeAreaResponse.kt
@@ -1,0 +1,21 @@
+package org.sdato.geocell.dto.response
+
+data class DistrictResponse(
+	val id: String,
+	val district: String,
+	val countryId: String
+)
+
+data class CountyResponse(
+	val id: Long,
+	val countyCode: String,
+	val county: String,
+	val districtId: String
+)
+
+data class CellsByAdministrativeAreaResponse(
+	val districtId: String,
+	val countyId: Long?,
+	val caopPolygonGeoJson: String?,
+	val cells: List<CellResponse>
+)
