# geocell/src/main/kotlin/org/sdato/geocell/dto/response/CellResponse.kt
@@ -19,7 +19,8 @@ data class CellResponse(
 	val mccMnc: CellMccMncResponse?,
 	val band: CellBandResponse?,
 	val polygonGeoJson: String?,
-	val polygonShortGeoJson: String?
+	val polygonShortGeoJson: String?,
+	val caopPolygonGeoJson: String?
 )
 
 data class CellLocationResponse(
